Completed Social Links setup

--- a/frontend/templates/frontend/auth/login.html
+++ b/frontend/templates/frontend/auth/login.html
@@ -16,6 +16,7 @@
     <!-- <meta property="og:url" content="https://www.yourwebsite.com/login"> -->
 
     <title>Login</title>
+    <link rel="icon" type="image/png" href="{% static 'frontend/logo.png' %}" />
     <link rel="stylesheet" href="{% static 'frontend/assets/index.css' %}">
 
 </head>
