--- a/frontend/templates/frontend/auth/verify_email.html
+++ b/frontend/templates/frontend/auth/verify_email.html
@@ -16,7 +16,8 @@
         <!-- <meta property="og:url" content="https://www.yourwebsite.com/signup"> -->
     
         <title>VividSync : Email Verification</title>
-        <link rel="stylesheet" href="{% static 'frontend/assets/index.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'frontend/logo.png' %}" />
+    <link rel="stylesheet" href="{% static 'frontend/assets/index.css' %}">
     
     </head>
     <body style="height: 100%;">
