--- a/frontend/templates/frontend/profile/setup_personal_info.html
+++ b/frontend/templates/frontend/profile/setup_personal_info.html
@@ -14,6 +14,7 @@
     <meta property="og:description" content="Select your account type to tailor your Vivid Sync experience.">
     
     <title>Personal Info - Vivid Sync</title>
+    <link rel="icon" type="image/png" href="{% static 'frontend/logo.png' %}" />
     <link rel="stylesheet" href="{% static 'frontend/assets/index.css' %}">
 </head>
 <body class="light">
