--- a/frontend/templates/frontend/profile/setup_social_links.html
+++ b/frontend/templates/frontend/profile/setup_social_links.html
@@ -5,18 +5,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Choose your account type with Vivid Sync">
-    <meta name="keywords" content="account type, influencer, content creator, organization">
+    <meta name="description" content="Setup your social links with Vivid Sync">
+    <meta name="keywords" content="social links, setup, Vivid Sync">
     <meta name="author" content="Vivid Sync">
     
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="Choose Account Type - Vivid Sync">
-    <meta property="og:description" content="Select your account type to tailor your Vivid Sync experience.">
+    <meta property="og:title" content="Setup Social Links - Vivid Sync">
+    <meta property="og:description" content="Configure your social links to enhance your Vivid Sync profile.">
     
-    <title>Choose Account Type - Vivid Sync</title>
-    <link rel="stylesheet" href="{% static 'frontend/assets/index.css' %}">
+    <title>Setup Social Links - Vivid Sync</title>
     <link rel="icon" type="image/png" href="{% static 'frontend/logo.png' %}" />
-
+    <link rel="stylesheet" href="{% static 'frontend/assets/index.css' %}">
 </head>
 <body class="light">
 
