--- a/frontend/templates/frontend/auth/terms_of_service.html
+++ b/frontend/templates/frontend/auth/terms_of_service.html
@@ -18,6 +18,7 @@
     <!-- <meta property="og:url" content="https://www.vividsync.com/terms-of-service"> -->
 
     <title>Terms of Service - Vivid Sync</title>
+    <link rel="icon" type="image/png" href="{% static 'frontend/logo.png' %}" />
     <link rel="stylesheet" href="{% static 'frontend/assets/index.css' %}">
 </head>
 <body class="light">
