--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -7,7 +7,8 @@
 <head>
     <!-- Include your main CSS file -->
     <link rel="stylesheet" href="{% static 'frontend/assets/index.css' %}"> 
-    
+    <link rel="icon" type="image/png" href="{% static 'frontend/logo.png' %}" />
+
 </head>
 <body>
     <div id="root"></div>
