dashboard is setlling in

--- a/frontend/templates/frontend/dashboard/dashboard.html
+++ b/frontend/templates/frontend/dashboard/dashboard.html
@@ -15,3 +15,8 @@
 <title>Dashboard - Vivid Sync</title>
 {% endblock %}
 
+{% block content %}
+{% endblock %}
+{% block footer %}
+{% endblock %}
+
