--- a/frontend/templates/frontend/auth/login.html
+++ b/frontend/templates/frontend/auth/login.html
@@ -36,7 +36,7 @@
         </div>
         
         <!-- Right side for React app's form -->
-        <div id="root" class="w-full md:w-1/2 light"></div>
+        <div id="root" class="w-full md:w-1/2 light p-8"></div>
     </div>
 
     <script type="module" src="{% static 'frontend/assets/main.js' %}"></script> 
