--- a/frontend/templates/frontend/auth/signup.html
+++ b/frontend/templates/frontend/auth/signup.html
@@ -36,7 +36,7 @@
             </div>
             
             <!-- Right side for React app's form -->
-            <div id="root" class="w-full md:w-1/2 light">
+            <div id="root" class="w-full md:w-1/2 light p-8">
                 <!-- Here will be mounted the SignUp React component -->
             </div>
         </div>
