--- a/frontend/templates/frontend/auth/terms_of_service.html
+++ b/frontend/templates/frontend/auth/terms_of_service.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     
-    <div id="root" class="w-full md:w-1/2 light">
+    <div id="root" class="w-full md:w-1/2 light mx-auto">
         <!-- Here will be mounted the SignUp React component -->
     </div>
 
