--- a/frontend/templates/frontend/auth/password_reset.html
+++ b/frontend/templates/frontend/auth/password_reset.html
@@ -5,38 +5,37 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Verify Email Vivid Sync - Verify your account">
-        <meta name="keywords" content="email, Verify, verify email">
+        <meta name="description" content="Reset Password - Vivid Sync">
+        <meta name="keywords" content="password, reset, Vivid Sync">
         <meta name="author" content="Ayoub Achak">
     
         <!-- Add Open Graph meta tags for better sharing on social media -->
-        <meta property="og:title" content="Verify Email - Vivid Sync">
-        <meta property="og:description" content="Verify Vivid Sync Email">
+        <meta property="og:title" content="Reset Password - Vivid Sync">
+        <meta property="og:description" content="Reset your Vivid Sync password">
         <!-- <meta property="og:image" content="{% static 'path/to/your/image.jpg' %}"> -->
-        <!-- <meta property="og:url" content="https://www.yourwebsite.com/signup"> -->
+        <!-- <meta property="og:url" content="https://www.yourwebsite.com/reset-password"> -->
     
-        <title>VividSync : Email Verification</title>
+        <title>VividSync : Reset Password</title>
     <link rel="icon" type="image/png" href="{% static 'frontend/logo.png' %}" />
     <link rel="stylesheet" href="{% static 'frontend/assets/index.css' %}">
     
     </head>
     <body style="height: 100%;">
-        <header class="border-b border-gray-200 light " style="height: 15%;">
+        <header class="border-b border-gray-200 light" style="height: 15%;">
             <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
                 <!-- Logo -->
                 <a href="/" class="pl-35px">
                     <img class="w-[64px] h-[64px]" src="{% static 'frontend/logo.png' %}" alt="Project Logo">
                 </a>
             </nav>
-        </header>
-        <div class="flex w-full" style="height: 85%;" >
+        </header> 
+        <div class="flex w-full h-full" style="height: 85%;">
             <!-- Left side with light theme and logo -->
             <div class="hidden md:flex md:w-1/2 light items-center justify-center">
                 <img src="{% static 'frontend/images/logos/vivid-sync-high-resolution-logo-transparent-350x300.png' %}" alt="Vivid Sync Logo" class="w-1/2">
             </div>
-            
             <!-- Right side for React app's form -->
-            <div id="root" class="w-full md:w-1/2 light">
+            <div id="root" class="w-full md:w-1/2 light  p-8">
                 <!-- Here will be mounted the SignUp React component -->
             </div>
         </div>
